--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,3 +3,4 @@
 # Max size, in megabytes, for files uploaded with the file_uploader.
 # Default: 200
 maxUploadSize = 1
+enableXsrfProtection = false
