--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,5 @@
 # Max size, in megabytes, for files uploaded with the file_uploader.
 # Default: 200
 maxUploadSize = 1
-enableCors = false
+enableCORS = false
 enableXsrfProtection = false
